BUGFIX: fix issues with logowall slider
- separate slide class for logo wall slider
- fix distorted images
- fix backend behaviour (jump to slide)

--- a/app/DistributionPackages/MyVendor.AwesomeNeosProject/Resources/Private/Fusion/Presentation/Components/Logowall/_Logowall.scss
+++ b/app/DistributionPackages/MyVendor.AwesomeNeosProject/Resources/Private/Fusion/Presentation/Components/Logowall/_Logowall.scss
@@ -14,6 +14,7 @@
     img, .image-placeholder {
         height: 100%;
         max-height: 100px;
+        width: auto;
         min-height: unset;
     }
 }
